packages/ses/test/error/issue-2941/test3/error-trapping-none.demo.js
import '../../../../index.js';

lockdown({
  errorTaming: 'unsafe',
  stackFiltering: 'concise',
  errorTrapping: 'none',
});

try {
  throw Error(`karramba`);
} catch (e) {
  throw Error('que?', { cause: e });
}
